# end_user_june

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  run_experiment.py
data/: Emails.csv  cognitive-phishing-annotations-latest.csv  dataset_seq1.csv  dataset_seq2.csv  dataset_seq3.csv  dataset_seq4.csv  dataset_seq5.csv
data/sequences/: sequence_1.txt  sequence_2.txt  sequence_3.txt  sequence_4.txt  sequence_5.txt
llm_end_user/: __init__.py  dataset_writer.py  email_loader.py  experiment_manager.py  prompts.py  saliency.py  sequence_loader.py  types.py
llm_end_user/providers/: __init__.py  _parsing.py  gemini.py  ollama.py  openai.py
scripts/: build_sequences.py
