[project]
name = "llm-end-user"
version = "0.1.0"
description = "LLM-subject simulator for the DDMLab phishing-susceptibility experiment"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "google-genai>=0.3",
    "openai>=1.40",
    "ollama>=0.3",
]

[project.scripts]
run-experiment = "run_experiment:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["llm_end_user", "llm_end_user.providers"]
py-modules = ["run_experiment"]
